--- a/public/js/view/home.html
+++ b/public/js/view/home.html
@@ -1,2 +1,1 @@
-<h1> alksioencv;asiwerjflksjdfiwjfjaksjfvawoefjvaojfaksdjfvoa </h1>
-
+<div>;alkshjfgiopq[hjwadfv[jansdv[oiahjsdo[nvas[oih a[sidhf[lakhjcv alsdfna;slfdihv SLKdnfaSEDJVH{OSIEJ</div>
