--- a/public/js/styles/style.css
+++ b/public/js/styles/style.css
@@ -3,7 +3,7 @@ html {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
+  background-size: cover; 
 }
 
 body {
@@ -20,14 +20,24 @@ body {
 }
 .menu {
  float: right;
- padding: 10%;
+
 }
 
 .wrapper {
-  background: url(http://sd.keepcalm-o-matic.co.uk/i/keep-calm-and-play-foosball-5.png) no-repeat center center fixed; 
-  -webkit-background-size: cover;
+  
+  }
+
+.img {
+    -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
 }
+}
+
+
+
+
+
+
