--- a/public/js/view/profile/profile.html
+++ b/public/js/view/profile/profile.html
@@ -1,6 +1,6 @@
 <div class='wrapper'>
+<img src="http://sd.keepcalm-o-matic.co.uk/i/keep-calm-and-play-foosball-5.png">
 
 
-
-<h1>;why wont you work come on work for me this time.</h1>
+<h1>why wont you work come on work for me this time.</h1>
 </div>
