--- a/public/js/styles/style.css
+++ b/public/js/styles/style.css
@@ -1,9 +1,5 @@
 html { 
-  background: url(http://sport-squad.com/images/SSF1001_topview.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover; 
+  
 }
 
 body {
@@ -19,7 +15,7 @@ body {
 	background-color: 
 }
 .menu {
- float: right;
+  
 
 }
 
@@ -27,7 +23,22 @@ body {
   
   }
 
+#rapper {
+    background-color: blue;
+    background-size: contain;
+    width: 100%;
+    height: 100%;
+    
+}
+
+
+.homepic {
+  background-image: url('http://sport-squad.com/images/SSF1001_topview.jpg');
+  background-size: contain;
+}
+
 .img {
+
     -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
