--- a/public/js/view/home.html
+++ b/public/js/view/home.html
@@ -1,4 +1,4 @@
-<!-- <div id='rapper'></div>
+<div id='rapper'></div>
 
 	<div class='boxed'>
 	 	mackay wins 9 loses 24
@@ -7,7 +7,6 @@
 	<div id="bracket-content">			
 		<textarea class="bracket-compose" placeholder=""/></textarea>
 	</div>
-	<button type="button">CLICK ME!</button> -->
+	<button type="button">CLICK ME!</button>
 
 
-<div id="bkng"></div>
